@@ -67,7 +67,6 @@ namespace Banshee.Plugins.Alarm
 
         private void OnOKClicked(object o, EventArgs e) {
             // The alarm thread has to be re-initialized to take into account the new alarm time
-            this.plugin.alarmTimeChanged = true;
             this.plugin.alarmThread.Interrupt();
             this.Destroy();
         }
